--- a/programma.html
+++ b/programma.html
@@ -21,25 +21,21 @@
     <div class="container">
         <h2>Ci sposiamo il 31 Luglio 2025</h2>
         <h2>Cerimonia Nuziale</h2>
-        <p>
-            Presso la <strong>Chiesa dell'Annunziata</strong><br>
-            Alle ore <strong>16.00</strong> <br>
+        <h2>Presso la Chiesa dell'Annunziata</h2>
+        <h2> Alle ore 16.00</h2>
             <a class="btn google-btn" 
                href="https://www.google.com/maps/search/?api=1&query=Via+Spirito,+80061+Annunziata+NA+Italy"
                target="_blank">
-               Cerca su Google
+               Indicazioni
             </a>
-        </p>
         <h2>Ricevimento</h2>
-        <p>
-            Presso <strong>Villa Solaria</strong><br>
-            Alle ore <strong>18.00</strong><br>
+        <h2>Presso Villa Solaria</h2>
+        <h2>Alle ore 18.00</h2>
             <a class="btn google-btn" 
                href="https://www.google.com/maps/search/?api=1&query=Villa+Solaria,+Via+Caselle,+10,+80061+Massa+Lubrense+NA+Italy"
                target="_blank">
-               Cerca su Google
+               Indicazioni
             </a>
-        </p>
 
     </div>
 </body>
