--- a/programma.html
+++ b/programma.html
@@ -19,18 +19,18 @@
     </nav>
 
     <div class="container">
-        <h2>Ci sposiamo il 31 Luglio 2025</h2>
+        <h2>Ci sposiamo il <strong>31 Luglio 2025</strong> </h2>
         <h2>Cerimonia Nuziale</h2>
-        <h2>Presso la Chiesa dell'Annunziata</h2>
-        <h2> Alle ore 16.00</h2>
+        <h2><strong> Presso la Chiesa dell'Annunziata</strong> </h2>
+        <h2> Alle ore <strong> 16.00</strong></h2>
             <a class="btn google-btn" 
                href="https://www.google.com/maps/search/?api=1&query=Via+Spirito,+80061+Annunziata+NA+Italy"
                target="_blank">
                Indicazioni
             </a>
         <h2>Ricevimento</h2>
-        <h2>Presso Villa Solaria</h2>
-        <h2>Alle ore 18.00</h2>
+        <h2>Presso <strong> Villa Solaria</strong> </h2>
+        <h2>Alle ore <strong> 18.00</strong> </h2>
             <a class="btn google-btn" 
                href="https://www.google.com/maps/search/?api=1&query=Villa+Solaria,+Via+Caselle,+10,+80061+Massa+Lubrense+NA+Italy"
                target="_blank">
