--- a/rsvp.html
+++ b/rsvp.html
@@ -31,7 +31,7 @@
                 <input type="email" id="email" placeholder="Inserisci la tua email" required style="display:none;">
             </div>
 
-            <p class="preferences-text"><strong>Segnalaci le tue preferenze</strong></p>
+            <p class="preferences-text">Segnalaci le tue preferenze</p>
 
             <div class="preferences">
                 <label><input type="checkbox" value="Vegetariano"> Vegetariano</label>
