--- a/programma.html
+++ b/programma.html
@@ -21,7 +21,7 @@
     <div class="container">
         <h2>Ci sposiamo il <strong>31 Luglio 2025</strong> </h2>
         <h2>Cerimonia Nuziale</h2>
-        <h2><strong> Presso la Chiesa dell'Annunziata</strong> </h2>
+        <h2>Presso la <strong>Chiesa dell'Annunziata</strong> </h2>
         <h2> Alle ore <strong> 16.00</strong></h2>
             <a class="btn google-btn" 
                href="https://www.google.com/maps/search/?api=1&query=Via+Spirito,+80061+Annunziata+NA+Italy"
