--- a/programma.html
+++ b/programma.html
@@ -20,6 +20,7 @@
 
     <div class="container">
         <h2>Ci sposiamo il <strong>31 Luglio 2025</strong> </h2>
+        <img src="images/pollen-core.png" alt="Wedding Symbol" class="small-icon">
         <h2>Cerimonia Nuziale</h2>
         <h2>Presso la <strong>Chiesa dell'Annunziata</strong> </h2>
         <h2> Alle ore <strong> 16.00</strong></h2>
