--- a/rsvp.html
+++ b/rsvp.html
@@ -38,6 +38,7 @@
                 <label><input type="checkbox" value="Vegano"> Vegano</label>
                 <label><input type="checkbox" value="Senza Lattosio"> Senza Lattosio</label>
                 <label><input type="checkbox" value="Celiaco"> Celiaco</label>
+                <label><input type="checkbox" value="Celiaco"> Nessuna</label>
             </div>
 
             <button type="submit" class="btn">Invia</button>
