--- a/programma.html
+++ b/programma.html
@@ -33,7 +33,7 @@
         <h2>Presso <strong> Villa Solaria</strong> </h2>
         <h2>Alle ore <strong> 18.00</strong> </h2>
             <a class="btn google-btn" 
-               href="https://www.google.com/maps/search/?api=1&query=Villa+Solaria,+Via+Caselle,+10,+80061+Massa+Lubrense+NA+Italy"
+               href="Come%20raggiungere%20Villa%20Solaria.pdf"               
                target="_blank">
                Indicazioni
             </a>
