--- a/orizzonti_radici.html
+++ b/orizzonti_radici.html
@@ -34,8 +34,7 @@
                 profumi, <br>
                 luci,<br>
                 dettagli <br>
-                che ci accompagneranno <br>
-                nel tempo.</p>
+                che ci accompagneranno nel tempo.</p>
             <a class="btn" href="#">Un dono che profuma di casa</a>
         </div>
     </div>
