--- a/rsvp.html
+++ b/rsvp.html
@@ -28,7 +28,7 @@
             <div>
                 <input type="text" id="nome" placeholder="Nome" required>
                 <input type="text" id="cognome" placeholder="Cognome" required>
-                <input type="email" id="email" placeholder="Inserisci la tua email" required>
+                <input type="email" id="email" placeholder="Email" required>
             </div>
 
             <p class="preferences-text">Segnalaci le tue preferenze</p>
